--- a/style.css
+++ b/style.css
@@ -1,30 +1,97 @@
-.container{
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
     display: grid;
     grid-template-columns: 1fr 5fr;
     grid-template-rows: auto 1fr;
+    height: 100vh;
 }
 
 .sidebar{
+    background-color: pink;
     grid-row: 1 / -1;
     display: grid;
     grid-template-rows: auto auto 1fr;
     gap: 50px;
-}
-
-.sidebar-head{
-    margin-top: 25px;
+    padding-top: 25px;
+    padding-left: 30px;
 }
 
 .dash-element{
     display: flex;
 }
 
-.dash-element > p{
-    margin: 0;
-}
-
 .nav{
     display: flex;
     flex-direction: column;
     gap: 30px;
+}
+
+.header{
+    background-color: red;
+    margin: 0;
+    padding: 30px 50px;
+}
+
+.headTop{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 30px;
+}
+
+img[alt = "notification icon"]{
+    margin-left: auto;
+}
+
+.search ~ *,
+input[type = "search"]{
+    margin: 0 15px;
+}
+
+.head-bottom{
+    display: flex;
+    align-items: center;
+}
+
+.welcome-user > *,
+.dash-element > p{
+    margin: 0;
+}
+
+.welcome-user{
+    margin-left: 30px;
+}
+
+li{
+    list-style: none;
+}
+
+li > button{
+    border: none;
+    height: 40px;
+    width: 100px;
+    border-radius: 20px;
+    background-color: aqua;
+    color: white;
+}
+
+h1{
+    font-size: 1.5rem;
+}
+
+.head-bottom > ul{
+    display: flex;
+    margin-left: auto;
+    padding-left: 0;
+}
+
+.head-bottom button{
+    margin-left: 30px;
+}
+
+.main-content{
+    background-color: green;
 }
