--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 :root{
     --card-colour: rgb(255, 255, 255);
-    --normal-text-color: rgb(255, 250, 250);
+    --normal-text-color: white;
     --light-grey: #ecf2fd;
     --dark-grey: #d0dbee;
-    --main-color: 	#6ea0ff;
-    --seconadry-color: 	#62969c;
+    --main-color: 	#ffbf3e;
 }
 
 *{
@@ -27,14 +26,15 @@ body{
     grid-template-rows: auto auto auto 1fr;
     grid-template-columns: auto 1fr;
     row-gap: 50px;
-    padding-top: 25px;
-    padding-left: 10px;
+    padding-top: 45px;
+    padding-left: 30px;
 }
 
 #logo{
     width: 4rem;
     margin-right: 5px;
     grid-column: 1 / 2;
+    filter: invert(1);
 }
 
 .nav.top{
@@ -56,12 +56,11 @@ body{
     grid-row: 3 / 4;
 }
 
-
 .dash-element{
     display: flex;
     align-items: center;
-    font-size: 1.2rem;
-    font-weight: 400;
+    font-size: 1.15rem;
+    font-weight: 600;
     gap: 10px;
 }
 
@@ -69,6 +68,7 @@ body{
     width: 30px;
     grid-column: 1 / 2;
     justify-self: center;
+    filter: invert(1);
 }
 
 .nav{
@@ -79,7 +79,6 @@ body{
 }
 
 .header{
-    background-color: red;
     margin: 0;
     padding: 40px 50px;
     background-color: white;
@@ -97,7 +96,7 @@ input[type = "search"]{
     border: none;
     height: 30px;
     border-radius: 15px;
-    padding: 0 10px;
+    padding: 5px 20px;
     color: var(--normal-text-color);
     background-color: var(--light-grey);
     width: clamp(15ch, 70%, 200ch);
@@ -115,9 +114,14 @@ input[type = "search"]:focus{
     background-color: var(--dark-grey);
 }
 
+.align-right{
+    display: flex;
+    align-items: center;
+}
+
 .align-right > *,
 input[type = "search"]{
-    margin: 0 15px;
+    margin: 0 10px;
 }
 
 .head-bottom{
@@ -157,6 +161,21 @@ h1{
     padding-left: 0;
 }
 
+.trending > ul > li > img,
+.align-right > img + img{
+    border-radius: 25px;
+    box-shadow: auto;
+    height: 50px;
+    width: auto;
+}
+
+.head-bottom > img{
+    border-radius: 35px;
+    box-shadow: auto;
+    height: 70px;
+    width: auto;
+}
+
 .head-bottom button{
     margin-left: 30px;
 }
@@ -186,10 +205,15 @@ h1{
     display: flex;
     flex-direction: column;
     background-color: var(--card-colour);
-    border-left: 12px solid #ff9cc4;
+    border-left: 10px solid #B457DB;
     padding: 30px;
     border-radius: 10px;
-    position: relative;
+    color: rgb(85, 85, 85);
+}
+
+.card > h3{
+    margin-bottom: 5px;
+    color: black;
 }
 
 button > img{
@@ -199,6 +223,8 @@ button > img{
 .card-icons{
     margin-top: auto;
     margin-left: auto;
+    display: flex;
+    gap: 10px;
 }
 
 .announcments{
@@ -208,6 +234,7 @@ button > img{
 .announcments > ul{
     background-color: var(--card-colour);
     border-radius: 10px;
+    padding: 10px;
 }
 
 .trending > h2,
@@ -222,7 +249,7 @@ button > img{
 .trending > ul{
     display: grid;
     grid-template-columns: auto 1fr;
-    gap: 20px 20px;
+    gap: 15px 20px;
     background-color: var(--card-colour);
     padding: 20px;
     border-radius: 10px;
@@ -232,8 +259,35 @@ button > img{
     grid-column: 1 / 3;
     display: grid;
     grid-template-columns: subgrid;
+    align-items: center;
 }
 
 .trending > ul > li > img{
     grid-column: 1 / 2;
+}
+
+.announcments h3{
+    font-size: 0.95rem;
+}
+
+.announcments p{
+    font-size: 0.9rem;
+    color: rgb(85, 85, 85);
+}
+
+.trending h3{
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+
+.trending p{
+    font-size: 0.85rem;
+}
+
+hr{
+    background-color: rgb(85, 85, 85);
+}
+
+hr{
+    margin: 0 20px;
 }
